@@ -29,18 +29,19 @@
   <tr valign=top>
     <td><b>Fully supported, i.e., continually tested and used daily</b></td>
     <td>Solaris 7, 8 and 9, Windows 2000/XP (6.x, and 7.1 and
-        Borland C++ Builder 6), DEC UNIX 6.5, and Linux/Intel (Redhat,
-        Debian and SuSe),  Linux/Alpha (Redhat, Debian and SuSe).
+        Borland C++ Builder 6), and Linux/Intel (Redhat,
+        Debian and SuSe),  Linux/Alpha (SuSe).
     </td>
   </tr>
   <tr valign=top bgcolor="#AFAFAF">
    <td><b>Nearly fully supported, i.e., periodically tested</b></td>
-   <td>Windows 9x/ME, HP/UX 10.x and 11.x, VxWorks, LynxOS, and AIX 4.x
+   <td>Windows 9x/ME, HP/UX 11.x, VxWorks 5.5.1, LynxOS, and AIX 4.x
    </td>
   </tr>
   <tr valign=top>
     <td><b>Partially supported, i.e., infrequently tested</b></td>
-    <td> FreeBSD, NetBSD, Chorus, Tandem NS and MACOSX
+    <td> FreeBSD, NetBSD, Chorus, Tandem NS, HP/UX 10.x,
+         DEC UNIX 6.5, Linux/Alpha (Redhat and Debian), and MACOSX
     </td>
   </tr>
   <tr valign=top bgcolor="#AFAFAF">
